index.htmlを更新し、自己紹介セクションの内容を整理し、アクセス情報を新たに追加しました。また、画像のパスを修正し、いくつかの見出しを変更しました。

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header>
         <div>
             <a href="./">
-                <img src="images/logo.png" alt="自己紹介">
             </a>
             <nav>
                 <ul> 
@@ -27,45 +26,46 @@
                 これから教えてもらったこと、勉強したこと、やってみたこと<br>
                 を備忘録として残していこうと思います。</p>
         </div>
+        <p><img src="images/profile_18.JPG" alt="自己紹介"></p>
     </header>
     <main>
         <!--　コンセプト-->
         <section>
             <div>
-                <h2><span>home</span>普段の仕事内容</h2>
-                <p>普段は大学に通いながら自分で学習を進めつつ、週一でプログラミングとAIの勉強をさせてもらい記事にまとめたり、
-                    お手伝いをしたりしています。まだまだ修行中ですがこれからよろしくお願いします。
+                <h2>活動</h2>
+                <p>普段は大学に通いながら自分で学習を進め、お手伝いをしています。まだまだ修行中ですがこれからよろしくお願いします。
                 </p>
             </div>
             <div>
                 <div>
-                    <h3>簡単な自己紹介</h3>
-                    <p>小中とサッカーをして、高校から軽音楽部に入ってギターを始めました。
+                    <h3>自己紹介</h3>
+                    <p>小中とサッカーをしていて、高校から軽音楽部に入ってギターを始めました。
                         大学に入っても軽音楽部に入って楽しくライブに出たりしています。
                     </p>
                     <div>
-                        <p><span>好きなバンドとサッカーチーム</span>
-                            一番好きなバンドはクジラ夜の街っていうバンドで特に「風のもくてきち」っていう
+                        <p>
+                            一番好きなバンドはクジラ夜の街っていうバンドで<br>
+                            <span>「風のもくてきち」</span>っていう
                             曲が特に好きです。<br>
-                            他で言うと最近は、相対性理論、３５.7、夕方と猫、teleあたりをよく聞いてます。よかったら聞いてみてもらえると嬉しいです。<br>
+                            他で言うと最近は、相対性理論、３５.7、夕方と猫、teleあたりをよく聞いてます。<br>
+                            よかったら聞いてみてもらえると嬉しいです。<br>
                             好きなサッカーチームは、やっぱりバルセロナですね。特にロナウジーニョがいた時のバルサを見るとワクワクさせられますよね。
                         </p>
-                        <p><img src="img/introduct_home.jpeg" alt="練習風景"></p>
+                        <p><img src="images/band.JPG" alt="ライブ風景"></p>
                     </div>
-                    <a href="#hobby">バンドもやってます</a>
+                    <a href="#hobby"></a>
                 </div>
-                <p><img src="img/introduct_gitar.JPG" alt="バンド風景"></p>
+                <p><img src="images/band_2.JPG" alt="バンド風景"></p>
             </div>
         </section>
         <!--やっていくこと-->
         <section>
             <div>
-                <h2><span>ここで学習していくこと</span>これからの展望</h2>
+                <h2><span>学習と</span>これから/h2>
                 <div>
                     <article>
                         <div>
                             <h3>HTML</h3>
-                            <img 
                         </div>
                     </article>
                 </div>
@@ -86,7 +86,7 @@
                 <div>
                     <article>
                         <div>
-                            <h3>LLM（Dify</h3>
+                            <h3>LLM（Difyなど）</h3>
                         </div>
                     </article>
                 </div>
@@ -94,7 +94,7 @@
         </section>
         <section>
             <div>
-                <h2><span>request</span>申込</h2>
+                <h2><span>request</span></h2>
                 <form method="post" action="sample.php">
                     <table>
                         <tr>
@@ -146,8 +146,33 @@
                 </form>            
             </div>
         </section>
+        <!--アクセス-->
+        <section>
+            <div>
+                <div>
+                    <h2><span>access</span>アクセス</h2>
+                    <div>
+                        <h3>住所</h3>
+                        <p>
+                            東京都千代田区永田町1-7-1<br>
+                            永田町ビル10F
+                        </p>
+                        <p>
+                            <a href="https://www.google.com/maps/place/%E6%B0%B8%E7%94%B0%E7%94%BA%E3%83%93%E3%83%AB10F/@35.6640626,139.7530958,17z/data=!3m1!4b1!4m6!3m5!1s0x60188b75e4656e1b:0x5396107219551c0!8m2!3d35.6640626!4d139.7552845!16s%2Fg%2F11c402xjzn?entry=ttu&g_ep=EgoyMDI1MDIxMi4wIKXMDSoASAFQAw%3D%3D">GoogleMapで見る</a>
+                        </p>
+                        <p>tel:<span>03-3262-8000</span></p>
+                    </div>
+                    <p><img src="img/access.png" alt="アクセス"></p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
+        <p><a href="#"></a></p>
+        <div>
+            <a href="./"><img src="images/profile.JPG" alt="profile"></a>
+            <p>$copy;ryusei</p>
+        </div>
     </footer>
 </body>
 </html>
