index.htmlの自己紹介セクションの見出しを削除し、内容を空にしました。また、style.cssにおいて、#fvセクションの幅を50%に変更し、ボタンのスタイルを統一しました。これにより、全体のデザインが改善されました。

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <!--　コンセプト-->
         <section id="concept" class="mt14">
             <div class="wrap_1000">
-                <h2 class="t_center">活動</h2>
-                <p>普段は大学に通いながら自分で学習を進め、お手伝いをしています。まだまだ修行中ですがこれからよろしくお願いします。
+                <h2 class="t_center"></h2>
+                <p>
                 </p>
             </div>
             <div class="mt5 flex flex_right">
@@ -152,11 +152,11 @@
             </div>
         </section>
         <!--アクセス-->
-        <section>
-            <div>
-                <div>
+        <section id="access" class="mt14">
+            <div class="wrap_1240">
+                <div class="access_in">
                     <h2><span>access</span>アクセス</h2>
-                    <div>
+                    <div class="mt4">
                         <h3>住所</h3>
                         <p>
                             東京都千代田区永田町1-7-1<br>
@@ -165,7 +165,7 @@
                         <p>
                             <a href="https://www.google.com/maps/place/%E6%B0%B8%E7%94%B0%E7%94%BA%E3%83%93%E3%83%AB10F/@35.6640626,139.7530958,17z/data=!3m1!4b1!4m6!3m5!1s0x60188b75e4656e1b:0x5396107219551c0!8m2!3d35.6640626!4d139.7552845!16s%2Fg%2F11c402xjzn?entry=ttu&g_ep=EgoyMDI1MDIxMi4wIKXMDSoASAFQAw%3D%3D">GoogleMapで見る</a>
                         </p>
-                        <p>tel:<span>03-3262-8000</span></p>
+                        <p class="tel">tel:<span>03-3262-8000</span></p>
                     </div>
                     <p><img src="img/access.png" alt="アクセス"></p>
                 </div>
