index.htmlのフッターを更新し、ロゴを追加しました。また、CSSにフッターのスタイルを新たに追加し、ページトップボタンのスタイルを改善しました。

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
         </section>
     </main>
     <footer>
-        <p><a href="#"></a></p>
-        <div>
-            <!--<a href="./"><img src="images/profile.JPG" alt="profile"></a>-->
+        <p id="pagetop"><a href="#"></a></p>
+        <div class="wrap_1000">
+            <a href="./" class="logo"><img src="images/profile.JPG" alt="profile"></a>
             <p>$copy;ryusei</p>
         </div>
     </footer>
