index.htmlにハンバーガーメニューのチェックボックスとラベルを追加し、CSSにハンバーガーメニューのスタイルを実装しました。これにより、レスポンシブデザインが強化され、ナビゲーションが改善されました。

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             <a href="./" class="logo"><img src="images/logo.png" alt="logo"></a>
             </a>
             <nav>
+                <input id="check-a" type="checkbox" class="check">
+                <label class="label" for="check-a">
+                    <span class="border1"></span>
+                    <span class="border2"></span>
+                    <span class="border3"></span>
+                </label>
                 <ul class="text"> 
                     <li><a href="#home">home</a></li>
                     <li><a href="#concept">hobby</a></li>
