index.htmlのコメントアウトを解除し、セクションの構造を整理しました。また、style.cssに新しいメディアクエリを追加し、レスポンシブデザインを強化しました。全体的なスタイルの一貫性を向上させました。

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
             </nav>
         </div>
         <!--ファーストビュー-->
-        <!-- <div id="fv">
+        <div id="fv">
             <div class="fv_in">
             <p>こんにちは、初めまして、インターン生のryuseiです<br>
                 これから教えてもらったこと、勉強したこと、やってみたこと<br>
                 を備忘録として残していこうと思います。</p>
-        </div> -->
+        </div>
         </div>
     </header>
     <main>
         <!--　コンセプト-->
-        <!-- <section id="concept" class="mt14">
+        <section id="concept" class="mt14">
             <div class="wrap_1000">
                 <h2 class="t_center"></h2>
                 <p>
@@ -69,9 +69,9 @@
                     <a href="#hobby class=link_btn">question</a>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!--やっていくこと-->
-        <!-- <section id="do">
+        <section id="do">
             <div class="bg_gray">
                 <div class="wrap_1240 card_in">
                 <h2 class="t_center"><span>学習とこれから</span></h2>
@@ -103,8 +103,8 @@
                 </div>
                 </div>
             </div>
-        </section> -->
-        <!--<section id="request" class="mt14">
+        </section>
+        <section id="request" class="mt14">
             <div class="wrap_1000">
                 <h2 class="t_center"><span>request</span></h2>
                 <form method="post" action="sample.php">
@@ -157,9 +157,9 @@
                     <p class="btn_submit"><button type="submit">内容を確認する</button></p>
                 </form>            
             </div>
-        </section> -->
+        </section>
         <!--アクセス-->
-        <!-- <section id="access" class="mt14">
+        <section id="access" class="mt14">
             <div class="wrap_1240">
                 <div class="access_in">
                     <h2><span>access</span>アクセス</h2>
@@ -177,14 +177,14 @@
                     <p><img src="img/access.png" alt="アクセス"></p>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
-    <!-- <footer>
+    <footer>
         <p id="pagetop"><a href="#home"></a></p>
         <div class="wrap_1000">
             <a href="#home" class="logo"><img src="images/profile.JPG" alt="profile"></a>
             <p>$copy;ryusei</p>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
