index.htmlに自己紹介セクションと学習内容のセクションを追加し、問い合わせフォームを実装しました。また、footerのクラス名を変更し、style.cssでナビゲーションとフッターのスタイルを調整しました。全体的なレイアウトとデザインの一貫性を向上させました。

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </section>
     </main>
     <footer>
-        <div class="wrap_1000">
+        <div class="footer__body wrap_1000">
             <a href="#home" class="logo"><img src="images/profile.JPG" alt="profile"></a>
             <p>$copy;ryusei</p>
         </div>
